src/tests/snapshots/niri__tests__window_opening__check_target_output_and_workspace@fsT-spA1.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\nset parent: A1"
expression: snapshot
---
final monitor: headless-1
final workspace: 0 (ws-1)

initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1280 × 720, states: [Activated]
